--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ p{
 =========================  */
 .header-section{
     width: 100%;
-    height: 10vh;
+    height: 10rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
