--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body{
     --hColor: #181E4B;
 }
 .row{
-    max-width: 100%;
+    width: min(96%, 110rem);
     margin: 6rem auto;
 }
 h1{
@@ -76,6 +76,7 @@ p{
 }
 /* for 1600+ screen size */
 @media screen and (min-width:1600px) {
+    width: min(96%, 160rem !important);
     h1{
         font-size: 7.5rem;
     }
