--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,9 @@ p{
 }
 /* for 1600+ screen size */
 @media screen and (min-width:1600px) {
-    width: min(96%, 160rem !important);
+    .row{
+        width: min(96%, 160rem !important);
+    }
     h1{
         font-size: 7.5rem;
     }
